tdf#145999 -1 was the representation of unlimited cell width

when using UniString -1 -> 0xFFFF i.e. old-time EDIT_NOLIMIT

Change-Id: Ie40fa65a88a2b8961d70635ca5e4ec851567e089